fixed black bar around nav on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h4{
   font-size: 40px;
   color:#2e282a;
   text-align: left;
-  
+
 }
 body{
   background-color: #02c3bd;
@@ -131,7 +131,6 @@ text-decoration:none;
 text-align: center;
 font-family: 'Roboto',helvetica,sans-serif;
 color: white;
-background-color: #2e282a;
 }
 
 #contact{
